--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node-cron": "^3.0.0",
     "@types/uuid": "^8.3.3",
     "@types/uuidv4": "^5.0.0",
+    "@types/xml-js": "^1.0.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.2"
   },
