--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "devDependencies": {
+    "@types/convert-excel-to-json": "^1.7.1",
     "@types/cors": "^2.8.12",
     "@types/date-fns": "^2.6.0",
     "@types/jsonwebtoken": "^8.5.6",
@@ -23,12 +24,14 @@
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
     "consign": "^0.1.6",
+    "convert-excel-to-json": "^1.7.0",
     "cors": "^2.8.5",
     "date-fns": "^2.27.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "node-cron": "^3.0.0",
+    "pdf-parser": "^1.0.5",
     "uuid": "^8.3.2",
     "uuidv4": "^6.2.12",
     "xml-js": "^1.6.11"
