--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/convert-excel-to-json": "^1.7.1",
     "@types/cors": "^2.8.12",
     "@types/date-fns": "^2.6.0",
@@ -32,6 +33,7 @@
     "mysql": "^2.18.1",
     "node-cron": "^3.0.0",
     "pdf-parser": "^1.0.5",
+    "prisma": "^3.11.0",
     "uuid": "^8.3.2",
     "uuidv4": "^6.2.12",
     "xml-js": "^1.6.11"
