--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/jsonwebtoken": "^8.5.6",
     "@types/mysql": "^2.15.19",
     "@types/node-cron": "^3.0.0",
+    "@types/nodemailer": "^6.4.4",
     "@types/uuid": "^8.3.3",
     "@types/uuidv4": "^5.0.0",
     "@types/xml-js": "^1.0.0",
@@ -32,6 +33,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "node-cron": "^3.0.0",
+    "nodemailer": "^6.7.3",
     "pdf-parser": "^1.0.5",
     "prisma": "^3.11.0",
     "uuid": "^8.3.2",
