--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@prisma/client": "^3.12.0",
     "@types/express": "^4.17.13",
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
