--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="mysql://mundialh_prisma:Db264080DbPrisma@162.240.24.27:3306/mundialhub_v2"
+DATABASE_URL="mysql://prisma:Db264080Db@3.136.243.230:3306/mundialhub_v2"
