--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,11 @@
     "outDir": "./dist",            
     "esModuleInterop": true,                    
     "forceConsistentCasingInFileNames": true,                                
-    "skipLibCheck": true,             
+    "skipLibCheck": true,
+    
+    "lib": [
+      "ES2021.String"
+    ]
   },
   "include": [
     "src/**/*.ts"
