--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-DATABASE_URL=
+DATABASE_URL="mysql://prisma:Db264080Db@3.136.243.230:3306/mundialhub_v2"
+MYSQL_HOST="3.136.243.230"
+MYSQL_PORT="3306"
+MYSQL_USER="prisma"
+MYSQL_PASSWORD="Db264080Db" 
+MYSQL_DATABASE="mundialh_mundial_hub"
