--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "build": "tsc",
+    "start": "node -r dotenv/config ./dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "devDependencies": {
@@ -11,6 +13,7 @@
     "@types/convert-excel-to-json": "^1.7.1",
     "@types/cors": "^2.8.12",
     "@types/date-fns": "^2.6.0",
+    "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/mysql": "^2.15.19",
     "@types/node-cron": "^3.0.0",
@@ -30,6 +33,7 @@
     "convert-excel-to-json": "^1.7.0",
     "cors": "^2.8.5",
     "date-fns": "^2.27.0",
+    "dotenv": "^16.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
